# extracted-data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: validate-docs-to-schema.yml
data/afile_level_outputs/: A10001331.json  A10017891.json  A10139321.json  A10179278.json  A10294862.json  A10343151.json  A10394732.json  A10430675.json  A10515479.json  A10517306.json  A10534184.json  A10534406.json  A10551867.json  A10643620.json  A10706964.json  A10712436.json  A10775863.json  A10891711.json  A10891712.json  A10943354.json  A11138471.json  A11324862.json  A11336118.json  A11507210.json  A11638538.json  A11776754.json  A11799647.json  A11979216.json  A12012827.json  A12250430.json  A12284895.json  A12288810.json  A12296289.json  A12315057.json  A12468555.json  A12482893.json  A12491240.json  A12495368.json  A12515466.json  A12537643.json  (+391 more)
data/afiles/: A10017891.json  A10139321.json  A10179278.json  A10343151.json  A10394732.json  A10430675.json  A10515479.json  A10551867.json  A10643620.json  A10706964.json  A10712436.json  A10775863.json  A10891712.json  A10943354.json  A11138471.json  A11336118.json  A11507210.json  A12012827.json  A12250430.json  A12284895.json  A12288810.json  A12315057.json  A12468555.json  A12482893.json  A12491240.json  A12495368.json  A12515466.json  A12537643.json  A12596514.json  A12851813.json  A12994632.json  A13073806.json  A13490102.json  A13573268.json  A13580960.json  A13833785.json  A13995582.json  A14115644.json  (+265 more)
docs/: schema.json
lib/: validate_json_to_schema.py
schemas/: afile-schema-kc-2023.json  document-schema.json
(+105074 files in other folders)
